fix(VDialog): don't apply scrollbar offset to fullscreen dialogs

--- a/packages/vuetify/src/components/VDialog/VDialog.sass
+++ b/packages/vuetify/src/components/VDialog/VDialog.sass
@@ -27,21 +27,24 @@
       > .v-card__actions
         padding: $dialog-card-actions-padding
 
-.v-dialog--fullscreen .v-overlay__content
-  border-radius: 0
-  margin: 0
-  width: 100%
-  height: 100%
-  overflow-y: auto
-  top: 0
-  left: 0
+.v-dialog--fullscreen
+  --v-scrollbar-offset: 0px
 
-  > .v-sheet
-    min-height: 100%
-    min-width: 100%
-    margin: 0 !important
-    padding: 0 !important
-    border-radius: 0 !important
+  .v-overlay__content
+    border-radius: 0
+    margin: 0
+    width: 100%
+    height: 100%
+    overflow-y: auto
+    top: 0
+    left: 0
+
+    > .v-sheet
+      min-height: 100%
+      min-width: 100%
+      margin: 0 !important
+      padding: 0 !important
+      border-radius: 0 !important
 
 .v-dialog--scrollable .v-overlay__content,
 .v-dialog--scrollable .v-overlay__content > form
